<resources>
    <string name="app_name">IjkPlayer</string>

    <string name="video_info_title">文件信息</string>
    <string name="video_info_name">名称：</string>
    <string name="video_info_size">大小：</string>
    <string name="video_info_path">路径：</string>
    <string name="video_info_date">时间：</string>
    <string name="video_speed_x">%1$sx</string>
    <string name="video_speed_3x_tips">3x快进</string>
    <string name="video_position_last">已定位至上次播放位置</string>
</resources>